src/test/ui/borrowck/borrowck-box-insensitivity.nll.stderr
error: compilation successful
  --> $DIR/borrowck-box-insensitivity.rs:160:1
   |
LL | / fn main() {
LL | |     copy_after_move();
LL | |     move_after_move();
LL | |     borrow_after_move();
...  |
LL | |     mut_borrow_after_borrow_nested();
LL | | }
   | |_^

error: aborting due to previous error

